--- a/src/Assets/index.html
+++ b/src/Assets/index.html
@@ -8,7 +8,7 @@
     epsg4326 =  new OpenLayers.Projection("EPSG:4326"); //WGS 1984 projection
     projectTo = map.getProjectionObject(); //The map projection (Spherical Mercator)
    
-    var lonLat = new OpenLayers.LonLat( -0.1279688 ,51.5077286 ).transform(epsg4326, projectTo);
+    var lonLat = new OpenLayers.LonLat( 10.18 ,36.89077286 ).transform(epsg4326, projectTo);
           
     
     var zoom=14;
